// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteRegistration can delete a registration with a valid updateToken 1`] = `
{
  "data": {
    "deleteRegistration": {
      "success": true,
    },
  },
}
`;

exports[`DeleteRegistration can't delete registration if registration token is not valid 1`] = `
{
  "data": {
    "deleteRegistration": null,
  },
  "errors": [
    {
      "extensions": {
        "exception": {
          "code": "NTFND",
          "severity": "ERROR",
          "where": "PL/pgSQL function app_public.delete_registration(text) line 12 at RAISE",
        },
      },
      "locations": [
        {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "Registration matching token was not found.",
      "path": [
        "deleteRegistration",
      ],
    },
  ],
}
`;

exports[`DeleteRegistration can't delete registration once event signup has closed 1`] = `
{
  "data": {
    "deleteRegistration": null,
  },
  "errors": [
    {
      "extensions": {
        "exception": {
          "code": "DNIED",
          "severity": "ERROR",
          "where": "PL/pgSQL function app_public.delete_registration(text) line 19 at RAISE",
        },
      },
      "locations": [
        {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "Deleting a registration after event signup has closed is not allowed. Please contact the event organizers.",
      "path": [
        "deleteRegistration",
      ],
    },
  ],
}
`;

exports[`DeleteRegistration sends an email to the next person in queue when a registration is deleted from a normal quota 1`] = `
Object {
  "data": Object {
    "deleteRegistration": Object {
      "success": true,
    },
  },
}
`;

exports[`DeleteRegistration sends an email to the next person in queue when a registration is deleted from an open quota 1`] = `
Object {
  "data": Object {
    "deleteRegistration": Object {
      "success": true,
    },
  },
}
`;
